<resources>
    <string name="app_name">NewGen2XPlay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inventory">Inventory</string>

    <string name="tag_settings">Tag Settings</string>
    <string name="tag_report_settings_title">Tag Report Settings</string>
    <string name="first_seen_time">First Seen Time</string>
    <string name="last_seen_time">Last Seen Time</string>
    <string name="pc">PC</string>
    <string name="phase">Phase</string>
    <string name="antenna">Antenna</string>
    <string name="crc">CRC</string>
    <string name="epc">EPC</string>
    <string name="tid">TID</string>
    <string name="user">USER</string>
    <string name="channel_index">Channel Index</string>
    <string name="tag_seen_count">Tag Seen Count</string>
    <string name="save_to_sled">SAVE</string>
    <string name="delete_prefilter">Delete </string>
    <string name="delete_all_Prefilters">Delete all Prefilters</string>
    <string name="all_tagfields">Select all</string>
    <string name="fistSeenTimeStamp">First Seen Time Stamp</string>
    <string name="lastSeenTimeStamp">Last Seen Time Stamp</string>
    <string name="title_singulation">Singulation</string>
    <string name="sl_flag_title">SL Flag</string>
    <string name="inv_state_title">Inventory State</string>
    <string name="tag_population_title">Tag Population</string>
    <string name="session_title">Session</string>

    <string name="title_prefilter">Prefilter</string>
    <string name="prefilter_target">Target</string>
    <string name="prefilter_action">Action</string>
    <string name="prefilter_membank">Memory bank</string>
    <string name="prefilter_pointer">Pointer</string>
    <string name="prefilter_length">Length</string>
    <string name="prefilter_mask">Tag Pattern</string>
    <string name="prefilter_truncate">Truncate</string>
    <string name="tag_pattern_title">Tag Pattern</string>
    <string name="prefilter_info">Do not modify an existing prefilter. instead, delete it and add a new one.</string>

    <string name="title_custom_tagquiet">Custom Tag Quieting</string>
    <string name="tagquiet_mask1">Tag quiet mask 1</string>
    <string name="tagquiet_mask2">Tag quiet mask 2</string>
    <string name="tagquiet_mask3">Tag quiet mask 3</string>
    <string name="save_tagquiet">Save Tag quieting filter</string>
    <string name="remove_tagquiet">Remove Tag quieting filter</string>
    <string name="sel_antenna">Select Antenna</string>

    <string name="title_tagProtect">Protected Mode</string>
    <string name="protect_mode">Mode</string>

    <string name="performOp">Perform Operation</string>
    <string name="enableVisibility">Enable Visibility</string>
    <string name="disableVisibility">Disable Visibility</string>
    <string name="protect_password">Password</string>
    <string name="password_hint">8 char 32bit HEX password</string>

    <string-array name="Protect_op_type_array">
        <item>Protect</item>
        <item>Unprotect</item>
        <item>GetPassword</item>
        <item>SetPassword</item>
        <item>Enable Inventory Of Protected Tags</item>
        <item>Clear Protected Mode Configuration</item>
    </string-array>
    <!-- Items for sessions -->
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>

    <!-- Items for populating tags -->
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>

    <!-- Items for inventory state -->
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>

    <string-array name="sl_flags_array">
        <item>ASSERTED</item>
        <item>DEASSERTED</item>
        <item>ALL</item>
    </string-array>

    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>

    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>

    <string-array name="pre_filter_target_options">
        <item>SL FLAG</item>
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
    </string-array>

    <string-array name="pre_filter_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="tagmask_enum">
        <item> </item>
        <item>S0B</item>
        <item>S2B</item>
        <item>S3B</item>
        <item>SL_ASSERT</item>
        <item>S0A</item>
        <item>S2A</item>
        <item>S3A</item>
        <item>SL_DEASSERT</item>
    </string-array>
</resources>