<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_connect" />

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/inventory" />

        <item
            android:id="@+id/nav_singulation"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/title_singulation" />

        <item
            android:id="@+id/nav_prefilter"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/title_prefilter" />

        <item
            android:id="@+id/nav_custom_tagquiet"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/title_custom_tagquiet" />

        <item
            android:id="@+id/nav_tag_protect"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/title_tagProtect" />


    </group>
</menu>